# AcornDB-binding

./: .gitignore  ARCHITECTURE.md  AcornDB.sln  AcornDB_Consolidated_Roadmap.md  AcornDB_Trunk_Work_Breakdown.md  CLAUDE.md  GitTrunkDemo.cs  LICENSE.md  NOTICE.md  QuickPerfTest.cs  README.bindings.md  README.md
.github/workflows/: rust-contract-tests.yml  rust-fmt-clippy.yml  rust-smoke.yml
Acorn.Sync/: SyncEngine.cs
AcornDB/: Acorn.cs  AcornDB.csproj  EventManager.cs  GroveStats.cs  INutment.cs  ISerializer.cs  LICENSE.md  NOTICE.md  NewtonsoftJsonSerializer.cs  NutStashConflictJudge.cs  StashExtensions.cs  TangleStats.cs  TreeStats.cs  Trunk.cs
AcornDB.Benchmarks/: AcornDB.Benchmarks.csproj  BasicOperationsBenchmarks.cs  CacheEffectivenessBenchmarks.cs  CompetitiveBenchmarks.cs  ConcurrencyBenchmarks.cs  ConflictResolutionBenchmarks.cs  DeltaSyncBenchmarks.cs  DurabilityBenchmarks.cs  LifecycleBenchmarks.cs  MemoryBenchmarks.cs  Program.cs  QueryPerformanceBenchmarks.cs  README.md  RealWorldWorkloadBenchmarks.cs  RedisCacheBenchmarks.cs  RootPipelineBenchmarks.cs  ScalabilityBenchmarks.cs  SyncBenchmarks.cs  SyncProtocolBenchmarks.cs  TrunkPerformanceBenchmarks.cs  docker-compose.redis.yml  run-without-redis.sh  start-redis.cmd  start-redis.sh
AcornDB.Canopy/: AcornDB.Canopy.csproj  CanopyBroadcaster.cs  CanopyHub.cs  HardwoodCanopyIntegration.cs  HardwoodCanopyRealtime.cs  HardwoodCanopySignalR.cs  HardwoodDiscoveryPatch.cs  HardwoodServer.cs  Roots.cs
AcornDB.Canopy/Controllers/: GroveGraphController.cs
AcornDB.Canopy/Models/: GroveGraphDto.cs
AcornDB.Cli/: AcornDB.Cli.csproj  Program.cs  README.md
AcornDB.Demo/: AcornDB.Demo.csproj  ProductionFeaturesDemo.cs  Program.cs
AcornDB.Demo/Properties/: launchSettings.json
AcornDB.Persistence.Cloud/: AcornCloudExtensions.cs  AcornDB.Persistence.Cloud.csproj  AwsS3Provider.cs  AzureBlobProvider.cs  AzureTableTrunk.cs  AzureTrunk.cs  CloudTrunk.cs  DynamoDbTrunk.cs  ICloudStorageProvider.cs
AcornDB.Persistence.DataLake/: AcornDB.Persistence.DataLake.csproj  DataLakeExtensions.cs  IPartitionStrategy.cs  ParquetOptions.cs  ParquetTrunk.cs  PartitionStrategy.cs  TieredTrunk.cs
AcornDB.Persistence.RDBMS/: AcornDB.Persistence.RDBMS.csproj  AcornRdbmsExtensions.cs  MySqlTrunk.cs  PostgreSqlTrunk.cs  SqlServerTrunk.cs  SqliteNativeIndex.cs  SqliteTrunk.cs
AcornDB.SampleApps/: AcornDB.SampleApps.csproj  Program.cs
AcornDB.SampleApps/Samples/: BlogApp.cs  CollaborativeNotesApp.cs  ECommerceApp.cs  MetricsMonitoringApp.cs  ResilientCacheApp.cs  RootPipelineDemo.cs  TodoListApp.cs
AcornDB.Test/: AcornDB.Test.csproj  AutoIdDetectionTests.cs  BranchExtensibilityTests.cs  BranchTests.cs  CapabilitiesTests.cs  CompositeIndexTests.cs  DeleteSyncTests.cs  DeltaSyncTests.cs  EventSubscriptionTests.cs  GroveTests.cs  InProcessEntanglementTests.cs  IndexingTests.cs  LRUCacheEvictionTests.cs  LifecycleManagementTests.cs  PolicyEnforcementRootTests.cs  ProductionFeaturesTests.cs  RootPipelineTests.cs  SqliteNativeIndexTests.cs  SyncModesTests.cs  TTLEnforcementTests.cs  TreeTests.cs  TrunkCapabilitiesTests.cs  TrunkTests.cs
AcornDB.Test/Policy/: LocalPolicyEngineTests.cs  TagAccessPolicyTests.cs  TtlPolicyTests.cs
AcornDB/Attributes/: ExperimentalAttribute.cs
AcornDB/Cache/: ICacheStrategy.cs  LRUCacheStats.cs  LRUCacheStrategy.cs  NoEvictionStrategy.cs
AcornDB/Compression/: BrotliCompressionProvider.cs  GzipCompressionProvider.cs  ICompressionProvider.cs  NoCompressionProvider.cs
AcornDB/Conflict/: IConflictJudge.cs  LocalWinsJudge.cs  RemoteWinsJudge.cs  TimestampJudge.cs  VersionJudge.cs
AcornDB/Extensions/: IndexExtensions.cs
AcornDB/Git/: GitCommitInfo.cs  GitHubTrunk.cs  IGitProvider.cs  LibGit2SharpProvider.cs
AcornDB/Indexing/: ICompositeIndex.cs  IComputedIndex.cs  IIdentityIndex.cs  IIndex.cs  INativeIndex.cs  INativeScalarIndex.cs  IScalarIndex.cs  ITextIndex.cs  ITimeSeriesIndex.cs  IdentityIndex.cs  IndexConfiguration.cs  IndexState.cs  IndexStatistics.cs  IndexType.cs  ManagedCompositeIndex.cs  ManagedScalarIndex.cs  TextSearchResult.cs  TimeBucket.cs
AcornDB/Logging/: AcornLog.cs  ConsoleLogger.cs  ILogger.cs  NullLogger.cs
AcornDB/Metrics/: GroveStats.cs  MetricsCollector.cs  TreeStats.cs  (+1 more)
AcornSyncServer/: AcornSyncServer.csproj  Hardwood.cs  HardwoodOptions.cs  Program.cs  SyncEndpoints.cs  TreeBark.cs
AcornVisualizer/: Program.cs  README.md
Bindings/: README.md
Canopy/: CanopyBroadcaster.cs  CanopyHub.cs  HardwoodCanopyIntegration.cs  HardwoodCanopyRealtime.cs  HardwoodCanopySignalR.cs  Roots.cs
QuickPerfTest/: Program.cs
SyncDemo/: Program.cs  README.md  SyncDemo.csproj  run-demo.cmd
Tests/: GroveTests.cs  SyncTests.cs  TreeTests.cs
rust/: Cargo.toml  rustfmt.toml
rust/acorn-bench/: Cargo.toml
rust/acorn-bench/src/: lib.rs
rust/acorn-canopy/: Cargo.toml
rust/acorn-canopy/src/: main.rs
rust/acorn-cli/: Cargo.toml
rust/acorn-cli/src/: main.rs
rust/acorn-core/: Cargo.toml
rust/acorn-core/src/: lib.rs
rust/acorn-sample-apps/: Cargo.toml
rust/acorn-sample-apps/src/: lib.rs
rust/acorn-sync/: Cargo.toml
rust/acorn-sync-server/: Cargo.toml
rust/acorn-sync-server/src/: main.rs
rust/acorn-sync/src/: lib.rs
rust/acorn-test-harness/: Cargo.toml
rust/acorn-test-harness/src/: lib.rs
rust/acorn-trunk-cloud-azure/: Cargo.toml
rust/acorn-trunk-cloud-azure/src/: lib.rs
rust/acorn-trunk-cloud-s3/: Cargo.toml
rust/acorn-trunk-cloud-s3/src/: lib.rs
rust/acorn-trunk-datalake/: Cargo.toml
rust/acorn-trunk-datalake/src/: lib.rs
rust/acorn-trunk-file/: Cargo.toml
rust/acorn-trunk-file/src/: lib.rs
rust/acorn-trunk-git/: Cargo.toml
rust/acorn-trunk-git/src/: lib.rs
rust/acorn-trunk-mem/: Cargo.toml
rust/acorn-trunk-mem/src/: lib.rs
rust/acorn-trunk-rdbms/: Cargo.toml
rust/acorn-trunk-rdbms/src/: lib.rs
wiki/: CHANGELOG.md  CLOUD_STORAGE_GUIDE.md  COMPRESSION_FEATURE.md  Cluster-&-Mesh.md  Concepts.md  Conflict-Resolution.md  Dashboard.md  Data-Sync.md  Events.md  GITHUB_TRUNK_DEMO.md  Getting-Started.md  Home.md  NURSERY_GUIDE.md  Storage.md
(+208 files in other folders)
