[workspace]
resolver = "2"
members = [
    "acorn-core",
    "acorn-sync",
    "acorn-sync-server",
    "acorn-trunk-mem",
    "acorn-trunk-file",
    "acorn-trunk-git",
    "acorn-trunk-rdbms",
    "acorn-trunk-cloud-s3",
    "acorn-trunk-cloud-azure",
    "acorn-trunk-datalake",
    "acorn-cli",
    "acorn-canopy",
    "acorn-bench",
    "acorn-sample-apps",
    "acorn-test-harness",
]
default-members = [
    "acorn-core",
    "acorn-sync",
    "acorn-trunk-mem",
    "acorn-trunk-file",
    "acorn-cli",
]

[workspace.package]
version = "0.0.1-alpha.0"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["AcornDB Team"]

[workspace.dependencies]
arrow = "52"
axum = { version = "0.7", default-features = false, features = ["http1", "http2", "macros", "tokio"] }
anyhow = "1"
aws-config = "1"
aws-sdk-s3 = "1"
azure-identity = "0.20"
azure-storage-blobs = "0.20"
bytes = "1"
criterion = "0.5"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
futures = "0.3"
git2 = "0.18"
hyper = { version = "1", features = ["full"] }
indicatif = "0.17"
parquet = "52"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sled = "0.34"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots"] }
tower = "0.4"
tower-http = { version = "0.5", default-features = false, features = ["trace", "compression-full", "cors", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
