[package]
name = "acorn-bench"
version = "0.0.1-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acorn-core = { path = "../acorn-core" }
acorn-sync = { path = "../acorn-sync" }
criterion = { version = "0.5", optional = true }
tracing = { workspace = true }

[features]
default = []
bench = ["criterion"]
