[package]
name = "acorn-sync-server"
version = "0.0.1-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acorn-core = { path = "../acorn-core" }
acorn-sync = { path = "../acorn-sync" }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[features]
default = ["http-server"]
http-server = []
websocket = []
auth = []
