[package]
name = "acorn-sync-server"
version = "0.0.1-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acorn-core = { path = "../acorn-core" }
acorn-sync = { path = "../acorn-sync" }
axum = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"] }
hyper = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
default = ["http-server"]
http-server = ["axum", "hyper", "tokio", "tower", "tower-http"]
websocket = ["tokio-tungstenite"]
auth = []
