[package]
name = "acorn-sync"
version = "0.0.1-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["std"]
std = ["tokio"]
backpressure-tests = []
http-client = ["reqwest"]
websocket = ["tokio-tungstenite"]

[dependencies]
acorn-core = { path = "../acorn-core" }
futures = { workspace = true }
reqwest = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tracing = { workspace = true }
