[package]
name = "acorn-trunk-cloud-azure"
version = "0.0.1-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acorn-core = { path = "../acorn-core" }
azure_identity = { workspace = true, optional = true }
azure_storage_blobs = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
default = []
azure-sdk = ["dep:azure_identity", "dep:azure_storage_blobs", "dep:tokio"]
mock = []
