[package]
name = "acorn-trunk-file"
version = "0.0.1-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acorn-core = { path = "../acorn-core" }
sqlx = { workspace = true, optional = true }
sled = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
default = ["filesystem"]
filesystem = []
sled = ["dep:sled"]
sqlite = ["sqlx/sqlite", "dep:sqlx"]
