[package]
name = "acorn-trunk-git"
version = "0.0.1-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acorn-core = { path = "../acorn-core" }
git2 = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
default = []
git2-backend = ["dep:git2"]
