[package]
name = "acorn-trunk-git"
version = "0.0.1-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acorn-core = { path = "../acorn-core" }
acorn-test-harness = { path = "../acorn-test-harness", optional = true }
git2 = { workspace = true, optional = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
default = []
git2-backend = ["dep:git2"]
contract-tests = ["acorn-test-harness"]
