[package]
name = "acorn-trunk-mem"
version = "0.0.1-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acorn-core = { path = "../acorn-core" }
parking_lot = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
default = []
clock-control = []
