[package]
name = "acorn-trunk-mem"
version = "0.0.1-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acorn-core = { path = "../acorn-core" }
parking_lot = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
acorn-test-harness = { path = "../acorn-test-harness", optional = true }

[features]
default = []
clock-control = []
contract-tests = ["acorn-test-harness"]
