[package]
name = "acorn-trunk-rdbms"
version = "0.0.1-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acorn-core = { path = "../acorn-core" }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
default = []
sqlite = ["sqlx/sqlite", "dep:sqlx", "dep:tokio"]
postgres = ["sqlx/postgres", "dep:sqlx", "dep:tokio"]
mysql = ["sqlx/mysql", "dep:sqlx", "dep:tokio"]
sqlserver = ["sqlx/mssql", "dep:sqlx", "dep:tokio"]
